Starts transition to coffeescript
- Now utilizing grunt
- Now logging JS errors using Sentry

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 node_modules
+antp-packaged.zip
+*.compiled.js
+*.compiled.js.map
+*.uglified.js
+*.uglified.js.map
 
 # Windows image file caches
 Thumbs.db
