--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt-contrib-uglify": "",
     "grunt-contrib-watch": "",
     "grunt-contrib-coffee": "",
-    "grunt-contrib-compress": ""
+    "grunt-contrib-compress": "",
+    "grunt-bumpup": ""
   }
 }
